chore(token): token is now generated at startup