@@ -14,9 +14,12 @@ import java.io.FileWriter;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.StandardOpenOption;
 import java.util.TimerTask;
 
 import static com.extraleaderboard.token.TokenHandler.NADEO_AUTH_NAME;
+import static com.extraleaderboard.token.TokenHandler.TOKEN_FOLDER;
 
 
 public class TokenRefreshTask extends TimerTask {
@@ -50,10 +53,9 @@ public class TokenRefreshTask extends TimerTask {
 
         // write the token to a file
         try {
-            String folder = TokenHandler.TOKEN_FOLDER;
-            Path path = Path.of(folder, audience.getAudienceName().toLowerCase() + ".token");
+            Path path = Paths.get(TOKEN_FOLDER + audience.getAudienceName().toLowerCase()+ ".token");
             String content = token.getAccessToken() + "\n" + token.getRefreshToken();
-            Files.write(path, content.getBytes());
+            Files.writeString(path, content, Files.exists(path) ? StandardOpenOption.TRUNCATE_EXISTING : StandardOpenOption.CREATE);
         } catch (IOException e) {
             LOGGER.error("Error while writing token to file", e);
         }
